--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,12 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
-   "devDependencies": {
-      "@types/express": "^4.17.14",
-      "@types/node": "^16.11.10",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+   "scripts": {
+      "dev": "nodemon src/index.ts",
+      "start": "ts-node src/index.ts",
+      "build": "tsc",
+      "eslint": "eslint src/**/*ts",
+      "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
       "express": "^4.18.2",
@@ -15,8 +16,11 @@
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.10"
    },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   }
+   "devDependencies": {
+      "@types/express": "^4.17.14",
+      "@types/node": "^16.11.10",
+      "nodemon": "^2.0.20",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   },
 }
