--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,17 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "scripts": {
-      "dev": "nodemon src/index.ts",
-      "start": "ts-node src/index.ts",
+      "dev": "nodemon src/server.ts",
+      "start": "node ./build/server.js",
+      "seed": "node-ts ./src/database/seed",
       "build": "tsc",
-      "eslint": "eslint src/**/*ts",
+      "eslint": "eslint ./src ./test --ext .ts",
+      "eslint:fix": "eslint ./src ./test --ext .ts --fix",
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
       "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.10"
