--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
       "lib": ["es5", "es6"],
       "target": "es5",
       "module": "commonjs",
+      "allowJs": true,
       "moduleResolution": "node",
       "esModuleInterop": true,
       "outDir": "./build",
