--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
+      "bcrypt": "^5.1.0",
+      "class-validator": "^0.14.0",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
       "pg": "^8.4.0",
