--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
    "dependencies": {
       "bcrypt": "^5.1.0",
       "class-validator": "^0.14.0",
+      "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
       "pg": "^8.4.0",
