--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
+      "firebase": "^9.16.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.10"
